# lardon

./: .gitignore  README.md  config.py  pixi.toml  pyproject.toml  set_lardon.sh  store.py
lardon/: noise_filter.py
lardon/plotting/: save_plot.py  style.py
lardon/settings/cbbot/: geo.json
lardon/settings/pdvd/: geo.json
lardon/utils/: filenames.py
settings/cbbot/: path.json  reco_parameters.json
src/lardon/: channel_mapping.py  clusters.py  config.py  data_containers.py  decode_data.py  det_spec.py  ghost.py  hit_finder.py  hits_3d.py  lar_param.py  lardon.py  matching.py  noise_filter.py  pedestals.py  pulse_waveforms.py  reconstruction_parameters.py  single_hits.py  stitch_tracks.py  store.py  track_2d.py  track_3d.py  vertexing.py  workflow.py
src/lardon/gallery/: pdvd.py
src/lardon/plotting/: charge_and_light.py  event_display.py  hits.py  noise.py  online.py  pds.py  reco_2d.py  reco_3d.py  save_plot.py  select_hits.py  waveforms.py
src/lardon/settings/: default_reco_parameters.json
src/lardon/settings/cbbot/: geo.json  reco_parameters.json
src/lardon/settings/chmap/: cb_chmap_bde_crp6_inv.txt  cb_pds_crp68_inv.txt  pdvd_chmap_tde_v5.txt  pdvd_pds_chmap.txt
src/lardon/settings/pdhd/: geo.json
src/lardon/settings/pdvd/: geo.json  path.json  reco_parameters.json
src/lardon/utils/: TEMP_wib_daphne.py  cern_daq.py  enum_type.py  file_infos.py  filenames.py  lyon_daq.py  wib_daphne.py  wib_daq.py
