[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lardon"
version = "1.0.0"
description = "Liquid Argon Reconstruction Done in pythON"
readme = "README.md"
requires-python = ">=3.11, <3.12"
authors = [
   {  name = "Laura Zambelli"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dune-lardon/lardon"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
lardon = "lardon.lardon:main"
